# agentic-harness

./: .gitignore  ATTRACTION_PLAN.md  AUTHORS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  USE_CASES.md  pyproject.toml
.githooks/: pre-push
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: external-beta.yml
.github/workflows/: ci.yml  publish.yml
agentic_harness/: __init__.py  cli.py  cli_assurance.py
agentic_harness/adapters/: __init__.py  coding_agent.py  github_actions.py  local_llm.py  model_agent.py  shell.py  tmux.py
agentic_harness/core/: __init__.py  artifacts.py  assurance.py  autonomy.py  autonomy_support.py  config.py  demos.py  errors.py  events.py  evidence.py  factory.py  goal_spec.py  local_goal_bridge.py  loop_guard.py  presentation.py  providers.py  recipes.py  redaction.py  release_validation.py  reporting.py  review.py  safety.py  secure_io.py  specification_amendment.py  specification_controller.py  (+8 more)
docs/: ARCHITECTURE_FREEZE.md  ASSURANCE_MODES.md  AUTONOMY_AUDIT_2026-07-10.md  CODEX_GOAL_PARITY.md  EVIDENCE_CONTRACT.md  EVIDENCE_V2.md  EXTERNAL_BETA.md  EXTERNAL_BETA_FEEDBACK.md  GOAL_SPEC.md  GUI_ARCHITECTURE.md  GUI_DEPLOYMENT.md  GUI_DESIGN.md  IMG2IMG_ASSET_PROVENANCE.md  LINEAR_FACTORY.md  NOVICE_GUI_40_TEST_CAMPAIGN_2026-07-12.md  PERSISTENT_ORCHESTRATOR.md  PUBLIC_RELEASE.md  PYPI_TRUSTED_PUBLISHING.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_0.10.0.md  RELEASE_NOTES_0.11.0.md  RELEASE_NOTES_0.12.0.md  RELEASE_NOTES_0.13.0.md  RELEASE_NOTES_0.13.1.md  RELEASE_NOTES_0.13.2.md  RELEASE_NOTES_0.13.3.md  RELEASE_NOTES_0.13.4.md  RELEASE_NOTES_0.13.5.md  RELEASE_NOTES_0.4.0.md  RELEASE_NOTES_0.5.0.md  RELEASE_NOTES_0.6.0.md  RELEASE_NOTES_0.6.1.md  RELEASE_NOTES_0.6.10.md  RELEASE_NOTES_0.6.11.md  RELEASE_NOTES_0.6.12.md  RELEASE_NOTES_0.6.13.md  RELEASE_NOTES_0.6.14.md  RELEASE_NOTES_0.6.15.md  RELEASE_NOTES_0.6.16.md  RELEASE_NOTES_0.6.17.md  (+39 more)
evaluation/: HARD_REAL_AGENT_PROTOCOL.md  LOCAL_PROFILE_PROTOCOL.md  README.md  REAL_AGENT_PROTOCOL.md  V012_ASSURANCE_PROTOCOL.md  __init__.py  external_beta_receipt.example.json  fixture_support.py  hard_real_agent_tasks.json  local_profile_matrix.json  package_real_agent_results.py  real_agent_tasks.json  real_agent_worker.py  run_gate_benchmark.py  run_real_agent_comparison.py  run_v012_assurance_matrix.py  score_local_profile_results.py  scripted_coding_agent.py  summarize_external_beta.py  tasks.json  v012_assurance_cases.json  verify_fixture.py  verify_real_agent_task.py
examples/: README.md  real-world-recipes.md
scripts/: local-node1-goal-current-truth.py  local-node1-goal-manager.py  local-node1-goal-supervisor.py  local-node1-goal-worker.py  local_node1_goal_command_impl.py  local_node1_goal_phases.py
tests/: frontend_token_race_test.js  test_accept_flow.py  test_accept_requires_review.py  test_adapters.py  test_artifact_store_repair.py  test_assurance_language.py  test_assurance_modes.py  test_attempt_history.py  test_autonomy.py  test_ci_workflow.py  test_cli.py  test_completion_claim_contract.py  test_config_conflict.py  test_config_load.py  test_core_engine.py  test_embedded_gui_backend.py  test_errors.py  test_evaluation.py  test_evidence.py  test_examples.py  test_external_beta_summary.py  test_frozen_requirement_status.py  test_goal_equality_and_duration.py  test_goal_serialization_safety.py  test_goal_spec.py  test_gui_api.py  test_gui_novice_matrix.py  test_gui_product_journey.py  test_gui_receipts.py  test_gui_setup.py  test_gui_v011_product.py  test_linear_factory.py  test_local_goal_bridge.py  test_local_node1_goal_command_doc_spam.py  test_local_node1_goal_marker_promotion.py  test_local_node1_goal_mission.py  test_local_node1_goal_phases.py  test_local_node1_goal_self_rescue.py  test_local_profile_evaluation.py  test_loop_guard_boundary.py  (+23 more)
(+93 files in other folders)
