[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-agentic-harness"
version = "0.6.21"
description = "A local-first goal execution harness with deterministic review gates."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Michael / Moortekweb" }]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
test = [
    "build>=1.2",
    "mypy>=1.10",
    "pytest>=8",
    "ruff>=0.5",
    "twine>=5.1",
    "types-PyYAML>=6.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["agentic_harness"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["legacy"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
agentic-harness = "agentic_harness.cli:main"

[tool.setuptools.packages.find]
include = ["agentic_harness*"]

[tool.setuptools.package-data]
agentic_harness = ["recipes/*.yml"]
