[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-agentic-harness"
version = "0.7.2"
description = "A local-first, provider-neutral goal runner with a CLI, GUI, bounded tools, and deterministic review gates."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "MIT"
authors = [{ name = "Michael / Moortekweb" }]
keywords = ["agents", "ai", "automation", "local-first", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
]
dependencies = ["PyYAML>=6.0"]

[project.urls]
Homepage = "https://github.com/moortekweb-art/agentic-harness"
Repository = "https://github.com/moortekweb-art/agentic-harness"
Issues = "https://github.com/moortekweb-art/agentic-harness/issues"
Changelog = "https://github.com/moortekweb-art/agentic-harness/blob/main/docs/RELEASE_NOTES_0.7.2.md"

[project.optional-dependencies]
test = [
    "build>=1.2",
    "mypy>=1.10",
    "pytest>=8",
    "ruff>=0.5",
    "twine>=5.1",
    "types-PyYAML>=6.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["agentic_harness"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
agentic-harness = "agentic_harness.cli:main"
agentic-harness-gui = "agentic_harness.gui.cli:main"

[tool.setuptools.packages.find]
include = ["agentic_harness*"]

[tool.setuptools.package-data]
agentic_harness = ["recipes/*.yml"]
"agentic_harness.gui" = ["static/*"]
